# flyto-blueprint

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE  PROJECT.md  README.md  SECURITY.md  STATE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  documentation.yml  publish-pypi.yml  security-scan.yml
docs/: API.md  FEATURES.md  README.md  WHITEPAPER.md  documentation-manifest.json
docs/reference/: README.md  blueprint-catalog.md  mcp-tools.md  python-api.md
flyto_blueprint/: README.md  __init__.py  compose.py  engine.py  fingerprint.py  intent.py  learn.py  loader.py  models.py  scoring.py  search.py  template.py  tools.py  validate.py
flyto_blueprint/blueprints/: api_fetch_save.yaml  api_get.yaml  api_post.yaml  api_with_auth.yaml  browser_click_and_extract.yaml  browser_click_navigate.yaml  browser_form_fill.yaml  browser_login.yaml  browser_page_audit.yaml  browser_responsive_test.yaml  browser_save_pdf.yaml  browser_scrape.yaml  browser_scrape_js.yaml  browser_scrape_list.yaml  browser_scrape_table.yaml  browser_screenshot.yaml  browser_screenshot_full.yaml  browser_search.yaml  browser_web_perf.yaml  data_csv_to_json.yaml  data_json_to_csv.yaml  email_send.yaml  file_download.yaml  file_save.yaml  file_transform.yaml  foreach_loop.yaml  google_search.yaml  http_get.yaml  http_post.yaml  image_compress.yaml  image_resize.yaml  json_transform.yaml  llm_chat.yaml  monitor_http.yaml  notify_email.yaml  notify_slack.yaml  ocr_image.yaml  pdf_extract_text.yaml  qrcode_generate.yaml  scrape_and_save.yaml  (+4 more)
flyto_blueprint/blueprints/blocks/: browser_init.yaml
flyto_blueprint/storage/: __init__.py  base.py  firestore.py  memory.py  sqlite.py
scripts/: generate-reference.py
tests/: conftest.py  test_compose_chain.py  test_expand.py  test_fingerprint.py  test_integration.py  test_learn.py  test_scoring.py  test_search.py  test_storage_memory.py  test_storage_sqlite.py  test_template.py
