[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flyto-blueprint"
version = "0.2.2"
description = "Self-evolving workflow pattern engine for Flyto2"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "ai-workflow-automation",
    "workflow-blueprints",
    "agentic-automation",
    "workflow-patterns",
    "yaml-recipes",
    "flyto2",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.4.0",
]

[project.optional-dependencies]
core = ["flyto-core>=2.26.8"]
firestore = ["google-cloud-firestore", "firebase-admin"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://flyto2.com"
Documentation = "https://docs.flyto2.com"
Repository = "https://github.com/flytohub/flyto-blueprint"
Issues = "https://github.com/flytohub/flyto-blueprint/issues"
Changelog = "https://github.com/flytohub/flyto-blueprint/blob/main/CHANGELOG.md"
Security = "https://github.com/flytohub/flyto-blueprint/blob/main/SECURITY.md"
Blog = "https://blog.flyto2.com/posts/ai-workflow-automation-alternatives"
Examples = "https://docs.flyto2.com/blueprint/"

[tool.hatch.build.targets.wheel]
packages = ["flyto_blueprint"]
